@@ -5,6 +5,7 @@ Version 3.0.0
 ~~~~~~~~~~~~~
 
 * Adding AVC support
+* Adding rav1e support (via librav1e)
 * Adding SVT AV1 support for libsvtav1 directly with FFmpeg
 * Adding SVT AV1 dual pass, tier, scene detection, and tile parameters
 * Fixing taskbar does not always show icon
